Working on Rank System

--- a/ArmadilloGamingDiscordBot.csproj
+++ b/ArmadilloGamingDiscordBot.csproj
@@ -316,6 +316,7 @@
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.234.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.248.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.249.jpg" />
+    <None Remove="Users.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -1246,6 +1247,9 @@
     <Content Include="Images\armadilloGamingIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Users.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -1253,6 +1257,10 @@
     <PackageReference Include="Hypixel.NET" Version="1.0.9.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-rc.1.22426.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="JsonFiles\" />
   </ItemGroup>
 
 </Project>
