--- a/ArmadilloGamingDiscordBot.csproj
+++ b/ArmadilloGamingDiscordBot.csproj
@@ -316,6 +316,7 @@
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.234.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.248.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.249.jpg" />
+    <None Remove="ItemImages\First_Item.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -1244,6 +1245,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\armadilloGamingIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ItemImages\First_Item.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
