--- a/ArmadilloGamingDiscordBot.csproj
+++ b/ArmadilloGamingDiscordBot.csproj
@@ -316,6 +316,7 @@
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.234.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.248.jpg" />
     <None Remove="ArmadilloImages\images - 2022-10-10T172154.249.jpg" />
+    <None Remove="config.json" />
     <None Remove="ItemImages\First_Item.png" />
   </ItemGroup>
 
@@ -1242,6 +1243,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="ArmadilloImages\images - 2022-10-10T172154.249.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\armadilloGamingIcon.png">
